--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 * {
   padding: 0;
   margin: 0;
@@ -11,8 +10,60 @@
   --common-padding: 0 8vw;
 }
 
+/* index CSS Start */
+.menu {
+  padding: var(--common-padding);
+}
+.menu svg {
+  margin-left: 1100px;
+  margin-top: 60px;
+}
 
-svg{
+.rotate p {
+  transform: rotate(-90deg);
+  transform-origin: top left; /* Rotate around the top-left corner */
+  font-size: 23px;
+  font-weight: 400px;
+  margin-top: 160px;
+  margin-bottom: 142px;
+  margin-left: 200px;
+  font-family:"FontsNinja-Aeonik", Arial, sans-serif ;
+}
+
+.menu2 a {
+  color: #000;
+  margin-top: 100px;
+}
+.menu2 h1 {
+  font-family: "FontsNinja-Aeonik", Arial, sans-serif;
+  font-size: 60px;
+  font-weight: 500px;
+  margin-left: 260px;
+  margin-right: 100px;
+  margin-bottom: -155px;
+}
+
+.info svg{
+  height: 4vh;
+  width: 20vh;
+  margin-left: -50px;
+  margin-top: 19px;
+  margin-right: -24px;
+}
+.info{
+  margin-left: 790px;
+  margin-top: 103px;
+  font-family: "FontsNinja-Aeonik", Arial, sans-serif;
+}
+
+/* YOUR NAME */
+
+
+
+
+
+
+svg {
   margin-top: 40px;
 }
 a {
@@ -24,12 +75,11 @@ a {
 header {
   background-color: var(--primary-bg-color);
   color: var(--primary-text-color);
-  height: 10vh;
+  height: 15vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: var(--common-padding);
-  
 }
 header .options {
   cursor: pointer;
@@ -46,8 +96,21 @@ main {
   overflow: hidden;
 }
 main h1 {
-  font-family: League Gothic;
+  /* YOUR NAME */
+  font-family: "impact";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 96px;
+  line-height: 115px;
+  text-align: center;
+  color: #ffffff;
 }
+
+main p{
+  font-family: "'Impact', sans-serif";
+  font-size: 20px;
+}
+
 .options-container {
   background-color: #fff;
   height: 100vh;
@@ -56,7 +119,7 @@ main h1 {
   top: -10vh;
   left: 0;
   transform: translateX(100vw);
-  transition: transform 0.5s ease-in-out;
+  transition: transform 1s ease-in-out;
 }
 .active {
   transform: translateX(0);
@@ -67,7 +130,7 @@ main h1 {
 }
 
 .section1 h3 {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: #000;
   font-size: 25px;
 }
@@ -80,10 +143,10 @@ main h1 {
 
 .skills p {
   display: inline-block;
-  margin-right: 45px;
+  margin-right: 20px;
   vertical-align: middle;
   font-family: Roboto;
-  margin-top: 15px;
+  margin-top: 25px;
 }
 
 .section2 {
@@ -117,11 +180,10 @@ main h1 {
 }
 
 .btn {
-display: flex;
+  display: flex;
   gap: 25px; /* Space between each anchor tag */
   justify-content: center;
   margin-top: 60px;
-
 }
 
 .btn a {
@@ -145,29 +207,24 @@ footer {
   width: 100%;
   padding: var(--common-padding);
 }
-.footer-left{
- display: flex;
- gap: 25px; /* Space between each anchor tag */
+.footer-left {
+  display: flex;
+  gap: 25px; /* Space between each anchor tag */
 }
-.footer-left a{
-    margin-top: 80px;
-}
-
-.footer-left svg{
-    margin-left: auto;
-    
+.footer-left a {
+  margin-top: 120px;
 }
 
-
-.footer-middle p{
-   color: #fff;
-   display: flex;
-   justify-content: center;
-   margin-bottom: 15px;
-   
+.svg-img {
+  margin-top: -100px;
+  margin-left: 880px;
 }
 
-
+.footer-middle p {
+  color: #fff;
+  text-align: center;
+  margin-top: -19px;
+}
 
 /* Project CSS Start */
 .section {
@@ -202,9 +259,9 @@ footer {
 }
 
 .btn1 {
-    margin-top: 70px;
-    margin-left: 550px;
-    gap: 27px;
+  margin-top: 70px;
+  margin-left: 550px;
+  gap: 27px;
 }
 
 .btn1 a {
@@ -253,7 +310,8 @@ label {
   margin-bottom: 5px;
 }
 
-input, textarea {
+input,
+textarea {
   width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
@@ -283,21 +341,32 @@ textarea {
 }
 
 /* responsive  */
-@media (max-width: 1024px) { /* For tablets */
+@media (max-width: 1024px) {
+  /* For tablets */
   :root {
     --common-padding: 0 5vw;
   }
+
+
+ 
 
   main {
     padding: 20px;
   }
 
-  .section2 {
-    grid-template-columns: repeat(2, 1fr); /* Adjust grid for fewer columns */
+  .section {
+    grid-template-columns: repeat(1, 1fr); /* Adjust grid for fewer columns */
   }
-
-  .box1 img, .box2 img {
-    width: 40vw; /* Adjust image width for smaller screens */
+  .section2 {
+    grid-template-columns: repeat(1, 1fr); /* Adjust grid for fewer columns */
+  }
+  .box1,
+  .box2 {
+    width: 50vw;
+  }
+  .box1 img,
+  .box2 img {
+    width: 50vw; /* Adjust image width for smaller screens */
     height: auto; /* Maintain aspect ratio */
   }
 
@@ -314,21 +383,27 @@ textarea {
     margin-right: auto;
     width: 60%; /* Button takes more space on smaller screens */
   }
+
+  .footer {
+    text-align: center;
+  }
+  .svg-img {
+    margin-left: 600px;
+    margin-bottom: -10px;
+  }
 }
 
-@media (max-width: 768px) { /* For mobile phones */
+@media (max-width: 768px) {
+  /* For mobile phones */
   header {
-    flex-direction: column;
+    flex-direction: row;
     height: auto;
     text-align: center;
+    width: auto;
   }
 
   header .options {
     margin-top: 10px;
-  }
-
-  .section {
-    grid-template-columns: 1fr; /* Single column for mobile */
   }
 
   .btn {
@@ -340,7 +415,8 @@ textarea {
     gap: 15px;
   }
 
-  input, textarea {
+  input,
+  textarea {
     font-size: 14px; /* Smaller font size for inputs */
   }
 
@@ -352,26 +428,79 @@ textarea {
     width: 80%; /* Button takes more space */
   }
 
+  .section {
+    grid-template-columns: repeat(1, 1fr); /* Adjust grid for fewer columns */
+  }
+  .box1,
+  .box2 {
+    width: 100%;
+  }
+  .box1 img,
+  .box2 img {
+    width: 100%; /* Adjust image width for smaller screens */
+    height: auto; /* Maintain aspect ratio */
+  }
+
   footer {
     text-align: center;
-    padding: 70px;
   }
-
   .footer-left {
-    flex-direction: row;
-    gap: 8px;
+    margin-left: 140px;
   }
-
-  .footer-left svg {
-  /* margin-top: 10px; */
-  margin-right: 50px;
+  .footer-middle {
+    margin-top: 60px;
+    margin-right: 40px;
+  }
+  .svg-img {
+    margin-left: 10px;
+    margin-bottom: -100px;
   }
 }
 
-@media (max-width: 480px) { /* Extra small devices */
+@media (max-width: 480px) {
+  /* Extra small devices */
   :root {
     --common-padding: 0 3vw;
   }
+
+   .menu svg{
+    margin-right: 100px;
+    margin-bottom: 100px;
+    height: 20vh;
+    width: 20vw;
+  }
+
+  .menu2 h1{
+    font-size: 200px;
+    margin-bottom: 60px;
+    margin-top: 100px;
+ }
+
+ .rotate p{
+  font-size: 100px;
+  margin-left: 40px;
+  margin-top: 580px;
+  margin-bottom: -552px;
+ }
+
+ .info{
+ font-size: 60px;
+ margin-left: 300px;
+ margin-top:300px ;
+ }
+
+ .info svg{
+ 
+ display: inline-block;
+ width: 65px; /* Set width for images */
+ height: 200px;
+ margin: -1px;
+  /* margin-top: 100px;
+  margin-right: 100px;
+  height: 20vh;
+  width: 20vw; */
+ 
+ }
 
   h1 {
     font-size: 20px;
@@ -381,30 +510,38 @@ textarea {
     font-size: 14px;
   }
 
-  .box1 img, .box2 img {
+  .setion {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .box1 img,
+  .box2 img {
     width: 100%; /* Full width for images */
     height: auto;
   }
 
   .section2 {
+    grid-template-columns: repeat(1, 1fr);
     gap: 20px; /* Reduce gap between items */
   }
   footer {
     text-align: center;
-    padding: 70px;
+    padding: 60px;
+  }
+
+  .footer-middle {
+    flex-direction: column;
+    gap: 10px;
+    margin-left: -10px;
   }
 
   .footer-left {
     flex-direction: row;
     gap: 8px;
+    margin-left: -20px;
   }
 
-  .footer-left svg {
-  /* margin-top: 10px; */
-  margin-right: 50px;
+  .svg-img {
+    /* margin-top: 10px; */
+    margin-left: 15px;
   }
 }
-
-
-
-
